Player can buy ship cards, implement test for that